--- a/16_Shop_MultiProduct/Views/Warranty/Check.cshtml
+++ b/16_Shop_MultiProduct/Views/Warranty/Check.cshtml
@@ -13,33 +13,37 @@
 
 
         <div class="main-content col-sm-12 form-horizontal">
-            <div class="form-group">
-                <label class="col-md-3 control-label"> Mã sản phẩm (mã vạch):</label>
-                <div class="col-md-5">
-                    <input type="text" class="form-control" id="seria" value="@ViewBag.seria" />
-                </div>
-
-            </div>
-
-            <div class="form-group">
-                <label class="col-md-3 control-label">CMTND/ Hộ Chiếu:</label>
-                <div class="col-md-5">
-                    <input type="text" class="form-control" id="identiryId" value="@ViewBag.identiryId" />
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-3"></div>
-                <div class="col-md-5" id="g-recaptcha"></div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-3"></div>
-                <div class="col-md-5">
-                    <div class="add-to-cart">
-                        <a href="javascript:void(0);" class="button product_type_simple add_to_cart_button ajax_add_to_cart" id="checkWarranty" tabindex="0">Kiểm tra bảo hành</a>
+            <div id="content-check">
+                <div class="form-group">
+                    <label class="col-md-3 control-label"> Mã sản phẩm (mã vạch):</label>
+                    <div class="col-md-5">
+                        <input type="text" class="form-control" id="seria" value="@ViewBag.seria" />
                     </div>
 
                 </div>
+
+                <div class="form-group">
+                    <label class="col-md-3 control-label">CMTND/ Hộ Chiếu:</label>
+                    <div class="col-md-5">
+                        <input type="text" class="form-control" id="identiryId" value="@ViewBag.identiryId" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-5" id="g-recaptcha"></div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-5">
+                        <div class="add-to-cart">
+                            <a href="javascript:void(0);" class="button product_type_simple add_to_cart_button ajax_add_to_cart" id="checkWarranty" tabindex="0">Kiểm tra bảo hành</a>
+                        </div>
+
+                    </div>
+                </div>
             </div>
+            <div id="content-check-rs"></div>
+        
         </div>
     </div>
 </div>
