--- a/16_Shop_MultiProduct/Views/Warranty/Index.cshtml
+++ b/16_Shop_MultiProduct/Views/Warranty/Index.cshtml
@@ -33,6 +33,12 @@
 
             </div>
             <div class="form-group">
+                <label class="col-md-3 control-label">Đại lý:</label>
+                <div class="col-md-5">
+                    <input type="text" class="form-control" id="reseller" />
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-3 control-label">Họ và tên:</label>
                 <div class="col-md-5">
                     <input type="text" class="form-control" id="fullName" />
@@ -77,6 +83,12 @@
                 <label class="col-md-3 control-label">Thư điện tử:</label>
                 <div class="col-md-5">
                     <input type="text" class="form-control" id="emial" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-3 control-label">Ghi chú:</label>
+                <div class="col-md-5">
+                    <textarea id="note" class="form-control"></textarea>                    
                 </div>
             </div>
             <div class="form-group">
