--- a/16_Shop_MultiProduct/Views/Warranty/Info.cshtml
+++ b/16_Shop_MultiProduct/Views/Warranty/Info.cshtml
@@ -51,6 +51,10 @@
                 <div class="col-md-9 "><span class="pull-left">@Model.Seria</span></div>
             </div>
             <div class="row">
+                <div class="col-md-3"><strong class="pull-right">Đại lý:</strong></div>
+                <div class="col-md-9 "><span class="pull-left">@Model.Reseller</span></div>
+            </div>
+            <div class="row">
                 <div class="col-md-3"><strong class="pull-right">Họ và tên:</strong></div>
                 <div class="col-md-9 "><span class="pull-left">@Model.contact.Name</span></div>
             </div>
@@ -77,6 +81,10 @@
             <div class="row">
                 <div class="col-md-3"><strong class="pull-right">Thư điện tử:</strong></div>
                 <div class="col-md-9 "><span class="pull-left">@Model.contact.Mail</span></div>
+            </div>
+            <div class="row">
+                <div class="col-md-3"><strong class="pull-right">Ghi chú:</strong></div>
+                <div class="col-md-9 "><span class="pull-left">@Model.Note</span></div>
             </div>
             <div class="form-group" style="margin-top:15px;">
                 <div class="col-md-3"></div>
