--- a/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -154,7 +154,7 @@
                                                     {
                                                         foreach (var childItem in item.ChildCategory)
                                                         {
-                                                            <option class="level-2" value="@childItem.Id">@childItem.Name</option>
+                                        <option class="level-2" value="@childItem.Id">&nbsp;&nbsp;@childItem.Name</option>
                                                         }
 
                                                     }
